# mesh_mask_rendering

./: CMakeLists.txt  README.md  env.yml  package.xml  render_mask.py
data/: W1.ply
data/panda/: camera_params_panda.txt  frame0000.txt  frame0001.txt
lib/: inout.py
scripts/: service.py
scripts/lib/: misc.py  renderer_py.py
