<?xml version="1.0"?>
<package format="2">
  <name>robot_shape_removal</name>
  
  <version>0.0.0</version>
  
  <description>The robot_shape_removal package</description>
  
  <maintainer email="kevin@todo.todo">kevin</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs </depend>
</package>
